mengubah penjelasan project

--- a/index.html
+++ b/index.html
@@ -105,39 +105,39 @@
             <div class="card">
               <img src="img/projects/port1.jpg" class="card-img-top" alt="Superindo" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Redesign Aplikasi mobile My Superindo</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/port2.jpg" class="card-img-top" alt="Superindo" />
+              <img src="img/projects/port2.jpg" class="card-img-top" alt="Zakat" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Design UI Mobile Kalkulator Zakat</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/port3.jpg" class="card-img-top" alt="Superindo" />
+              <img src="img/projects/port3.jpg" class="card-img-top" alt="ThingsUIX" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Design UI website Thingsuix</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/port4.jpg" class="card-img-top" alt="Superindo" />
+              <img src="img/projects/port4.jpg" class="card-img-top" alt="Jaktim" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Redesign website Jakarta Timur</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/port5.jpg" class="card-img-top" alt="Superindo" />
+              <img src="img/projects/port5.jpg" class="card-img-top" alt="Fabs" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Design UI Website Fabulous Shoes</p>
               </div>
             </div>
           </div>
