perbaikan about me

--- a/index.html
+++ b/index.html
@@ -66,18 +66,14 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              Hola, nama saya FARDHAN MAULADI bisa dipanggil FARDHAN, domisili Jakarta timur pondok bambu, saya sudah menikah, saya menempuh pendidikan S1 saya di universitas UIN JAKARTA jurusan SISTEM INFORMASI dan lulus di tahun 2019 dan
-              Saya juga menempuh DIPLOMA di CEP CCIT-FTUI di tahun 2016. Selama dikampus saya sudah mengikuti beberapa sertifikasi diantaranya sertifikasi CIBIA (CERTIFIED INTERNATIONAL BUSSINESS INTELLGIENCE ASSOSIACTE) tahun 2017,
-              sertifikasi HTML 5 APPLICATION DEVELOPMENT FUNDAMENTALS ditahun 2017 dan terakhir di tahun 2019 mengikuti sertifikasi sebagai PROJECT MANAGER, semua sertifikasi tersebut dilakukan di multimatics. Pengalaman kerja yang saya
-              miliki diantaranya pernah bekerja di PT GNV SOLUTION sebagai freelancer ASISTEN PROJECT MANAGER, untuk PROJECT di BANK BANTEN project BUSINESS IMPACT ANALYSIS pada tahun 2017-2018.
+              Halo, nama saya FARDHAN MAULADI bisa dipanggil FARDHAN / ADAN. Saya menempuh pendidikan S1 saya di universitas UIN Syarif Hidayatullah JAKARTA jurusan SISTEM INFORMASI dan lulus di tahun 2019. Saya senang sekali dengan desain
+              UI baik itu web ataupun mobile. Sudah ada bebrapa yang saya buat untuk saya jadikan sebagai portfolio saya. Jika anda tertarik untuk memakai jasa saya, silahkan kontak saya di form paling bawah, Enjoy !
             </p>
           </div>
           <div class="col-md-4">
             <p>
-              Di tahun 2018, saya juga mengikuti event INTERNATIONAL yaitu volunteer ASIAN PARA GAMES INDONESIA 2018. Di event ini, saya menjadi volunteer di INVITATION TOURNAMENT atau pra APG dan di MAIN EVENT APG nya, pada main eventnya
-              saya sebagai ketua VOLUNTEER di divisi AKREDITASI. Ada juga pengalaman volunteer saya di event BUKALAPAK dan event WARUNG PINTAR. Saya juga aktif organisasi di masyarakat, diantaranya organisasi KARANG TARUNA KELURAHAN PONDOK
-              BAMBU sebagai ketua divisi ORSENBUD periode 2017-2021 dan sebagai pendamping REMBUK RW 04 kel. Pondok Bambu dalam hal MUSRENBANG DKI sejak 2017 sampai sekarang. Pengalaman kerja terakhir saya di PT MITRA TRANSAKSI INDONESIA
-              sebagai FRONT END DEVELOPER untuk mesin EDC (ELECTRONIC DATA CAPTURE).
+              Hello, my name is FARDHAN MAULADI can be called FARDHAN / ADAN. I took my undergraduate education at UIN Syarif Hidayatullah JAKARTA majoring in INFORMATION SYSTEM and graduated in 2019. I am very happy with UI design, be it
+              web or mobile. There have been several that I have made to make into my portfolio. If you are interested in using my services, please contact me at the bottom form, Enjoy!
             </p>
           </div>
         </div>
